# morsel

./: .gitignore  Cargo.toml
src/: lib.rs
src/encode/: mod.rs
